# ClearFrame

.github/workflows/: publish-to-pypi.yml
clearframe/: CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
clearframe/builder/: __init__.py  graph.py  nodes.py  serializer.py  templates.py  validator.py
clearframe/clearframe/: __init__.py  cli.py
clearframe/clearframe/behavioural/: __init__.py  collector.py  events.py  features.py
clearframe/clearframe/core/: audit.py  config.py  errors.py  manifest.py  server.py  session.py  vault.py
clearframe/clearframe/gateway/: isolation.py
clearframe/clearframe/monitor/: goal_monitor.py  rtl.py
clearframe/clearframe/ops/: rate_limiting_patch.py  server.py
clearframe/clearframe/plugins/: registry.py
clearframe/clearframe/providers/: __init__.py  ollama.py
clearframe/tests/: test_audit.py  test_goal_monitor.py  test_manifest.py  test_vault.py
docs/: index.html
