[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "clearframe"
version         = "0.2.0"
description     = "Open-source AI agent protocol with auditability, safety controls, and a live AgentOps control plane."
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [{ name = "ClearFrame Contributors" }]
requires-python = ">=3.11"
keywords        = ["ai-agents", "llm", "safety", "auditability", "mcp-alternative", "agentic"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer[all]>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "anyio>=4.3",
    "slowapi>=0.1.9",        # Rate limiting on AgentOps REST API
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
# Install the full Erasys trust stack:
#   pip install clearframe[trust]
# Requires a GitHub token or SSH key that can read the private TrustRegistry repo.
trust = [
    "trust-registry @ git+https://github.com/ibrahimmukherjee-boop/TrustRegistry.git",
]

[project.scripts]
clearframe = "clearframe.cli:app"

[project.urls]
Homepage      = "https://github.com/ibrahimmukherjee-boop/ClearFrame"
Documentation = "https://github.com/ibrahimmukherjee-boop/ClearFrame#readme"
Issues        = "https://github.com/ibrahimmukherjee-boop/ClearFrame/issues"

[tool.hatch.build.targets.wheel]
packages = ["clearframe"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
